--- a/notebooks/Titanic.ipynb
+++ b/notebooks/Titanic.ipynb
@@ -4,18 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Radial Plot for Decision Tree Classifiers\n",
-    "##### Trying different ways to visualise and compare decision trees classifiers.\n",
-    "\n",
-    "<font color=#222255>To show some plots, I've used kaggle's <a href='https://www.kaggle.com/c/titanic'>Titanic dataset</a> and preprocessing and model selection from <a href='https://www.kaggle.com/ldfreeman3'>LD Freeman</a>'s <a href='https://www.kaggle.com/ldfreeman3/a-data-science-framework-to-achieve-99-accuracy'>notebook</a>.   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Using Titanic Dataset as example\n",
-    "##### <font color=darkred> Thanks to <a href='https://www.kaggle.com/ldfreeman3'>LD Freeman</a> for the data preprocessing and model selection : <a href='https://www.kaggle.com/ldfreeman3/a-data-science-framework-to-achieve-99-accuracy'>A Data Science Framework: To Achieve 99% Accuracy</a>."
+    "# Titanic Dataset from Kaggle\n",
+    "_<span style='color:darkred'>To show some plots, I've used kaggle's <a href='https://www.kaggle.com/c/titanic'>Titanic dataset</a>._   \n",
+    "_<span style='color:darkred'>Also, thanks to <a href='https://www.kaggle.com/ldfreeman3'>LD Freeman</a> for his notebook <a href='https://www.kaggle.com/ldfreeman3/a-data-science-framework-to-achieve-99-accuracy'>A Data Science Framework: To Achieve 99% Accuracy</a> on data preprocessing and model selection._"
    ]
   },
   {
