--- a/notebooks/Iris.ipynb
+++ b/notebooks/Iris.ipynb
@@ -20,11 +20,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn import model_selection, feature_selection\n",
-    "from sklearn import datasets\n",
-    "\n",
-    "from matplotlib import MatplotlibDeprecationWarning\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=MatplotlibDeprecationWarning)"
+    "from sklearn import datasets"
    ]
   },
   {
