--- a/notebooks/Titanic.ipynb
+++ b/notebooks/Titanic.ipynb
@@ -112,11 +112,7 @@
     "\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn import model_selection, feature_selection\n",
-    "from sklearn import datasets\n",
-    "\n",
-    "from matplotlib import MatplotlibDeprecationWarning\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=MatplotlibDeprecationWarning)"
+    "from sklearn import datasets"
    ]
   },
   {
