--- a/notebooks/Iris.ipynb
+++ b/notebooks/Iris.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overfit"
+    "# Simple Decision Tree"
    ]
   },
   {
@@ -85,8 +85,8 @@
    "source": [
     "radtree.plot_radial(dtree, X=X_train,Y=y_train, \n",
     "                    random_seed=42,\n",
-    "                    tiny_names=['s_lenth','s_width', 'p_lenth', 'p_width'],\n",
-    "                    l_alpha=.2, l_width=1\n",
+    "                    edges_labels=['s_lenth','s_width', 'p_lenth', 'p_width'],\n",
+    "                    l_alpha=.2, l_width=1, \n",
     "                   )"
    ]
   },
@@ -109,7 +109,7 @@
    "source": [
     "radtree.plot_radial(dtree, X=X_test,Y=y_test, \n",
     "                    random_seed=42,\n",
-    "                    tiny_names=['s_lenth','s_width', 'p_lenth', 'p_width'],\n",
+    "                    edges_labels=['s_lenth','s_width', 'p_lenth', 'p_width'],\n",
     "                    l_alpha=.2, l_width=1\n",
     "                   )"
    ]
@@ -215,7 +215,7 @@
    "source": [
     "radtree.plot_radial(dtree, X=X_test[:,sel_features], Y=y_test, \n",
     "                    random_seed=42,\n",
-    "                    tiny_names=['s_lenth','s_width', 'p_lenth', 'p_width'],\n",
+    "                    edges_labels=['s_lenth','s_width', 'p_lenth'],\n",
     "                    l_alpha=.2, l_width=1\n",
     "                   )"
    ]
@@ -305,7 +305,7 @@
    ],
    "source": [
     "radtree.plot_radial(dtree, X=X_test[:,sel_features], Y=y_test, l_alpha=.2, l_width=1, random_seed=42,\n",
-    "                    tiny_names=['s_lenth','s_width', 'p_lenth', 'p_width'])"
+    "                    edges_labels=['s_lenth','s_width', 'p_lenth'])"
    ]
   },
   {
