--- a/notebooks/Titanic.ipynb
+++ b/notebooks/Titanic.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "radtree.plot_radial(dtree, data=data_valid, feature_cols=feat_cols, label_col=label_col,\n",
     "                    random_seed=42,\n",
-    "                    tiny_names=['', 'class', 'port', '', 'group', 'age', 'fare'], \n",
+    "                    edges_labels=['', 'class', 'port', '', 'group', 'age', 'fare'], \n",
     "                    l_alpha=.2, l_width=1\n",
     "                   )"
    ]
@@ -272,7 +272,7 @@
    "source": [
     "radtree.plot_radial(dtree, data=data_valid, feature_cols=sel_features_cat, label_col=label_col,\n",
     "                    random_seed=42,\n",
-    "                    tiny_names=['', 'class', '', 'group', 'age', 'fare'], \n",
+    "                    edges_labels=['', 'class', '', 'group', 'age', 'fare'], \n",
     "                    l_alpha=.2, l_width=1\n",
     "                   )"
    ]
@@ -364,7 +364,7 @@
    "source": [
     "radtree.plot_radial(dtree, data=data_valid, feature_cols=sel_features_cat, label_col=label_col, \n",
     "                    l_alpha=.2, l_width=1, random_seed=42,\n",
-    "                    tiny_names=['', 'class', '', 'group', 'age', 'fare'])"
+    "                    edges_labels=['', 'class', '', 'group', 'age', 'fare'])"
    ]
   },
   {
